# bitlbee-facebook

./: .gitignore  .travis.yml  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  travis.sh  valgrind.supp
.github/workflows/: ci.yml  obs.yml
.travis/: bitlbee.sh  obs.sh
debian/: changelog  control  copyright
facebook/: .facebook.c.swp  Makefile.am  facebook-api.c  facebook-api.h  facebook-data.c  facebook-data.h  facebook-glib.h  facebook-http.c  facebook-http.h  facebook-id.h  facebook-json.c  facebook-json.h  facebook-mqtt.c  facebook-mqtt.h  facebook-thrift.c  facebook-thrift.h  facebook-util.c  facebook-util.h  facebook.c  facebook.h
